--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.1
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  flutter_spinkit: ^5.2.0
+  flutter_svg: ^2.0.9
+  validators: ^3.0.0
+
 
 
 
@@ -209,7 +216,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/30_splash-screen--git-in-vscode-and-fork-git-project-with-students.png
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -223,11 +231,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: dana
+      fonts:
+        - asset: assets/fonts/DANA-BOLD.ttf
+          weight: 700
+        - asset: assets/fonts/DANA-REGULAR.ttf
+          weight: 300
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
